# grogupy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  L-HEADER  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-package.yml
docs/source/: conf.py  index.rst  references.bib
docs/source/API/: modules.rst
docs/source/changelog/: index.rst
docs/source/development/: index.rst
docs/source/environment/: index.rst
docs/source/output-format/: GROGU-output-specs.txt  index.rst
docs/source/quickstart/: Running in HPC.rst  calculate_magnetic_parameters.ipynb  index.rst  running_in_hpc.rst
docs/source/tutorials/: command_line_usage.rst  index.rst  io_formats.rst
docs/source/visualizations/: index.rst
src/grogu/: __init__.py  cli.py  config.py
src/grogu/batch/: __init__.py
src/grogu/core/: cpu_solvers.py  gpu_solvers.py
src/grogu/io/: __init__.py  io.py  utilities.py
src/grogu/physics/: __init__.py  builder.py  contour.py  hamiltonian.py  kspace.py  (+2 more)
src/grogupy/: __init__.py  _tqdm.py  cli.py  config.py
tests/: 2.88.magnopy.txt  2.9.magnopy.txt  __init__.py  input.fdf  input.py  input0.fdf  input1.fdf  input_format.py  io_matlab_result.magnopy.txt  io_test_matlab.magnopy.txt  netcdf_test.magnopy.txt  netcdf_test_better.magnopy.txt  sisl_read.npy  sum_int.magnopy.txt  test.ipynb  test.magnopy.txt  test_CrIWSe.ipynb  test_Fe3GeTe2-2.ipynb  test_core.py  test_hamiltonian.py  test_io.py  test_magnetic_entity.py  test_magnopy.magnopy.txt  test_matlab.magnopy.txt  test_plot.py  test_results.py  trapz_int.magnopy.txt
(+211 files in other folders)
